// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders modal - with options 1`] = `
<div>
  <div
    className="full-screen-modal category-title"
  >
    <label
      className="control-label"
      htmlFor={undefined}
    >
      Upload data
    </label>
  </div>
  <div
    className="upload-modal full-screen-modal   container"
  >
    <div
      className="center-block row"
    >
      <form
        className="upload-form"
        onSubmit={[Function]}
      >
        <div
          className="upload-from form-group"
        >
          <label
            className="upload-from-title control-label"
            htmlFor={undefined}
          >
            Upload from:
          </label>
          <div
            className="upload-selection-form"
            onClick={undefined}
          >
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={true}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="selection"
                />
                <span
                  className="selection-text"
                >
                  Current selection
                </span>
              </label>
              <div
                className="selection-info"
              >
                (4 Rows x 2 Columns)
              </div>
            </div>
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={undefined}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="sheet"
                />
                <span
                  className="selection-text"
                >
                  Current sheet
                </span>
              </label>
              <div
                className="selection-info"
              >
                (Sheet1)
              </div>
            </div>
          </div>
        </div>
        <div
          className="upload-to"
        >
          <div
            className="url-group form-group"
          >
            <div
              className="body"
            >
              <label
                className="control-label"
                htmlFor={undefined}
              >
                Save data to:
              </label>
              <span
                className="input-group"
              >
                <div
                  className="url"
                >
                  <input
                    className="textField form-control"
                    id={undefined}
                    onChange={[Function]}
                    placeholder="Insert Dataset or Project URL"
                    type="text"
                    value={undefined}
                  />
                  <button
                    className="browse-button btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Browse
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <div
              className="upload-file-title-container"
            >
              <label
                className="control-label"
                htmlFor={undefined}
              >
                File name:
              </label>
              <div
                className="upload-titleLimit"
              >
                128 char max
              </div>
            </div>
            <span
              className="input-group"
            >
              <input
                className="textField-file form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="Create new file name"
                type="text"
                value=""
              />
            </span>
            <span
              className="filename-help help-block"
            >
              Your file will appear with the .csv extension. You can always change the name later.
            </span>
            
          </div>
          <div
            className="uplaod-data-buttons"
          >
            <button
              className="upload-cancel-button btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="upload-button-upload btn btn-primary"
              disabled={true}
              type="submit"
            >
              <img
                className="icon-upload-white"
                src="icon-upload-white.svg"
              />
              Upload
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="static-modal"
    />
  </div>
</div>
`;

exports[`renders modal - with range 1`] = `
<div>
  <div
    className="full-screen-modal category-title"
  >
    <label
      className="control-label"
      htmlFor={undefined}
    >
      Upload data
    </label>
  </div>
  <div
    className="upload-modal full-screen-modal   container"
  >
    <div
      className="center-block row"
    >
      <form
        className="upload-form"
        onSubmit={[Function]}
      >
        <div
          className="upload-from form-group"
        >
          <label
            className="upload-from-title control-label"
            htmlFor={undefined}
          >
            Upload from:
          </label>
          <div
            className="upload-selection-form"
            onClick={undefined}
          >
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={true}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="selection"
                />
                <span
                  className="selection-text"
                >
                  Current selection
                </span>
              </label>
              <div
                className="selection-info"
              >
                (4 Rows x 2 Columns)
              </div>
            </div>
            <div
              className="selection"
            >
              <label
                className="radio-button"
              >
                <input
                  checked={undefined}
                  name="selection"
                  readOnly={true}
                  type="radio"
                  value="sheet"
                />
                <span
                  className="selection-text"
                >
                  Current sheet
                </span>
              </label>
              <div
                className="selection-info"
              >
                (Sheet1)
              </div>
            </div>
          </div>
        </div>
        <div
          className="upload-to"
        >
          <div
            className="url-group form-group"
          >
            <div
              className="body"
            >
              <label
                className="control-label"
                htmlFor={undefined}
              >
                Save data to:
              </label>
              <span
                className="input-group"
              >
                <div
                  className="url"
                >
                  <input
                    className="textField form-control"
                    id={undefined}
                    onChange={[Function]}
                    placeholder="Insert Dataset or Project URL"
                    type="text"
                    value={undefined}
                  />
                  <button
                    className="browse-button btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Browse
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <div
              className="upload-file-title-container"
            >
              <label
                className="control-label"
                htmlFor={undefined}
              >
                File name:
              </label>
              <div
                className="upload-titleLimit"
              >
                128 char max
              </div>
            </div>
            <span
              className="input-group"
            >
              <input
                className="textField-file form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="Create new file name"
                type="text"
                value=""
              />
            </span>
            <span
              className="filename-help help-block"
            >
              Your file will appear with the .csv extension. You can always change the name later.
            </span>
            
          </div>
          <div
            className="uplaod-data-buttons"
          >
            <button
              className="upload-cancel-button btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="upload-button-upload btn btn-primary"
              disabled={true}
              type="submit"
            >
              <img
                className="icon-upload-white"
                src="icon-upload-white.svg"
              />
              Upload
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="static-modal"
    />
  </div>
</div>
`;

exports[`renders modal 1`] = `
<div>
  <div
    className="full-screen-modal category-title"
  >
    <label
      className="control-label"
      htmlFor={undefined}
    >
      Upload data
    </label>
  </div>
  <div
    className="upload-modal full-screen-modal   container"
  >
    <div
      className="center-block row"
    >
      <form
        className="upload-form"
        onSubmit={[Function]}
      >
        <div
          className="upload-to"
        >
          <div
            className="url-group form-group"
          >
            <div
              className="body"
            >
              <label
                className="control-label"
                htmlFor={undefined}
              >
                Save data to:
              </label>
              <span
                className="input-group"
              >
                <div
                  className="url"
                >
                  <input
                    className="textField form-control"
                    id={undefined}
                    onChange={[Function]}
                    placeholder="Insert Dataset or Project URL"
                    type="text"
                    value={undefined}
                  />
                  <button
                    className="browse-button btn btn-default"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Browse
                  </button>
                </div>
              </span>
            </div>
          </div>
          <div
            className="form-group"
          >
            <div
              className="upload-file-title-container"
            >
              <label
                className="control-label"
                htmlFor={undefined}
              >
                File name:
              </label>
              <div
                className="upload-titleLimit"
              >
                128 char max
              </div>
            </div>
            <span
              className="input-group"
            >
              <input
                className="textField-file form-control"
                id={undefined}
                onChange={[Function]}
                placeholder="Create new file name"
                type="text"
                value=""
              />
            </span>
            <span
              className="filename-help help-block"
            >
              Your file will appear with the .csv extension. You can always change the name later.
            </span>
            
          </div>
          <div
            className="uplaod-data-buttons"
          >
            <button
              className="upload-cancel-button btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="upload-button-upload btn btn-primary"
              disabled={true}
              type="submit"
            >
              <img
                className="icon-upload-white"
                src="icon-upload-white.svg"
              />
              Upload
            </button>
          </div>
        </div>
      </form>
    </div>
    <div
      className="static-modal"
    />
  </div>
</div>
`;
